Bug 1674408 - Define `stat64` as `stat` on OpenBSD. r=application-update-reviewers,bytesized

This is the approach taken for Bug 648735: see
https://bugzilla.mozilla.org/attachment.cgi?id=561029&action=diff.

Differential Revision: https://phabricator.services.mozilla.com/D104250